@@ -178,7 +178,7 @@ enum {CME_SCRIPTEND = 0, CME_LABEL, CME_SETVARIABLE, CME_SETSTRINGVAR, CME_DOKEY
   CME_SETFOLDERFORFRAMES, CME_SETITEMTARGETDEFOCUS, CME_SETITEMSERIESANGLES,
   CME_SUSPENDNAVREDRAW, CME_DEFERLOGUPDATES, CME_SETTILTAXISOFFSET, CME_ADDIMAGES,
   CME_SUBTRACTIMAGES, CME_MULTIPLYIMAGES, CME_DIVIDEIMAGES, CME_SCALE_IMAGE,
-  CME_CLOSENAVIGATOR, CME_OPENNAVIGATOR
+  CME_CLOSENAVIGATOR, CME_OPENNAVIGATOR, CME_OPENCHOOSERINCURRENTDIR
 };
 
 struct MacroFunction {
