@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+11/29/20: Added script command to make the next file chooser open in the
+current working directory instead of last one accessed by the chooser.
+
 11/29/20: Fixed which Run button has focus in one-line script window so Enter
 will run the script just edited; made Ctrl-A and Ctrl-Z work there (In 3.8).
 
